# iraq-mp-index

./: .gitignore  AICE_ALGORITHM.md  README.md  app.py  config.objective.yaml  config.shanghai.yaml  config.yaml  index.html  pyproject.toml  render.yaml  requirements.txt  settings.yaml
.github/workflows/: digest.yml  keepwarm.yml  refresh.yml  snapshot.yml
backend/: .env.example  README.md  requirements-worker.txt  requirements.txt  worker.py
backend/app/: common_auth.py  config.py  jobq.py  main.py  sources.py  tasks.py
backend/migrations/: 001_intelligence.sql  002_watchlist.sql  003_author_archive.sql  004_battlefield.sql  005_chief_ai.sql  006_narratives.sql  007_settings.sql  008_collector.sql  009_fusion.sql  010_opinion.sql  011_facebook.sql  012_visual_verification.sql  013_organizations.sql  014_public_anger.sql  015_org_type.sql  016_org_domain.sql  017_org_platform_phase1.sql  018_catalogs_phase2.sql  019_sources_usage_phase3.sql  020_survey_studio.sql  021_opinion_studies.sql  022_study_signals.sql
backend/tests/: conftest.py  (+5 more)
data/: members.csv  mentions.csv  raw_indicators.csv  telegram.csv  watch.csv
mpii/: __init__.py  cli.py  config.py  dashboard.html  dataio.py  news.py  normalize.py  report.py  scoring.py  sync.py  telegram.py  webexport.py
mpii.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
platform/: .env.example  .gitignore  SETUP.md  package-lock.json  package.json
rasd/: .gitignore  SETUP.md  next.config.mjs  package-lock.json  package.json
tests/: test_dataio.py  test_report.py  test_scoring.py
(+541 files in other folders)
