[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mpii"
version = "0.1.0"
description = "Member of Parliament Impact Index — scoring & ranking engine for Iraqi MPs"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
dashboard = ["streamlit>=1.30"]

[project.scripts]
mpii = "mpii.cli:main"

[tool.setuptools]
packages = ["mpii"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
